--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -52,3 +52,9 @@
     margin-top: 50px;
     font-size: 0.8rem;
 }
+
+.footer-divider {
+    width: 75%;
+    border-top: 1px solid #6f6e6e; /* Cor e estilo da linha */
+    margin: 0 auto; /* Espaçamento acima e abaixo da linha */
+}
