--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -14,46 +14,40 @@
   
   .nav-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between; /* Adiciona espaço entre os elementos */
     align-items: center;
     width: 100%;
     height: 80px;
     max-width: 1500px;
     position: relative;
-  }
+}
+
+.nav-menu {
+    display: flex;
+    list-style: none;
+    text-align: center;
+    margin-right: 2rem;
+    margin-left: auto; /* Move os itens para o canto direito */
+}
+
   
   .nav-logo {
-    color: #ffffff;
-    align-items: center;
-    margin-left: 10px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    flex-grow: 1;
-  
     display: flex;
     align-items: center;
-    justify-items: center;
-  }
-  
-  .nav-logo .icon {
-    display: inline-block;
-    width: 3rem;
-    height: 3rem;
-    margin-left: 16px;
-  }
+}
+
+.nav-logo img {
+    margin-left: 10px;
+    cursor: pointer;
+    width: 110px; /* Defina o tamanho desejado para a imagem */
+    height: auto;
+}
+
 
   .logo-image {
   width: 110px;
   height: auto;
 }
-  
-  .nav-menu {
-    display: flex;
-    list-style: none;
-    text-align: center;
-    margin-right: 2rem;
-  }
   
   .nav-links {
     color: #fff;
