--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -105,7 +105,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      border-top: 1pxsolid #fff;
+      border-top: 1px solid #fff;
       position: absolute;
       top: 80px;
       left: -110%;
@@ -115,13 +115,13 @@
   
     .nav-menu.active {
       background: #6699c6;
-      left: 0px;
+      left: 0;
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
     }
     .nav-item .active {
-      color: #4080ff;
+      color: black;
       border: none;
     }
     .nav-links {
